# fpm-utils

./: Cargo.toml  Makefile
crates/fpm-utils-host/: Cargo.toml
crates/fpm-utils-host/src/: backend_host_export.rs  backend_host_import.rs  lib.rs
src/: backend_host_import.rs  guest_exports.rs  guest_imports.rs  lib.rs
wits/: guest_backend.wit  host.wit
