[package]
name = "fpm-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true


[dependencies]
quote = "1.0.21"
proc-macro2 = "1.0.46"
wit-bindgen-guest-rust = { git = "https://github.com/bytecodealliance/wit-bindgen.git" }

[dependencies.syn]
version = "1.0.102"
features = ["full"]
